Added implementation for different player databases